# in-app-messaging-rust

./: .env.example  .gitignore  Cargo.toml  PROPOSAL.md  README.md  docker-compose.yml
docs/: index.html  swagger.yml
migrations/2020-02-29-182909_create_users/: up.sql
migrations/2020-03-02-220756_create_basic_schemas/: down.sql  up.sql
src/: config.rs  database.rs  errors.rs  helpers.rs  main.rs  routes.rs  schema.rs  server.rs  validate.rs
src/handlers/: admin.rs  content.rs  inbox.rs  message.rs  mod.rs  user.rs
src/models/: admin.rs  content.rs  inbox.rs  message.rs  message_status.rs  mod.rs  user.rs
